WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
97665
[BlackBerry] [DRT] eventSender.keyDown() doesn't support Ctrl key modifier
https://bugs.webkit.org/show_bug.cgi?id=97665
Summary
[BlackBerry] [DRT] eventSender.keyDown() doesn't support Ctrl key modifier
Xiaobo Wang
Reported
2012-09-26 05:36:21 PDT
DRT test: fast/forms/input-text-option-delete.html Ctrl + backspace should delete the whole word, since Ctrl key modifier doesn't work, only the last character is deleted.
Attachments
patch
(2.89 KB, patch)
2012-09-26 05:41 PDT
,
Xiaobo Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaobo Wang
Comment 1
2012-09-26 05:41:55 PDT
Created
attachment 165774
[details]
patch
Rob Buis
Comment 2
2012-09-26 06:46:28 PDT
Comment on
attachment 165774
[details]
patch Looks good.
WebKit Review Bot
Comment 3
2012-09-26 07:07:25 PDT
Comment on
attachment 165774
[details]
patch Clearing flags on attachment: 165774 Committed
r129634
: <
http://trac.webkit.org/changeset/129634
>
WebKit Review Bot
Comment 4
2012-09-26 07:07:28 PDT
All reviewed patches have been landed. Closing bug.
Xiaobo Wang
Comment 5
2012-09-26 23:04:41 PDT
close it
Rob Buis
Comment 6
2012-09-27 07:21:21 PDT
(In reply to
comment #5
)
> close it
Note, you can use webkit-patch mark-bug-fixed --bugid=97665 to close this report automatically and get a standard text for it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug