[BlackBerry] [DRT] eventSender.keyDown() doesn't support Ctrl key modifier https://bugs.webkit.org/show_bug.cgi?id=97665

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-09-26
Reviewed by Rob Buis.

This patch fixes test fast/forms/input-text-option-delete.html.

* DumpRenderTree/blackberry/EventSender.cpp:
(keyDownCallback):

Canonical link: https://commits.webkit.org/115650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129634 268f45cc-cd09-0410-ab3c-d52691b4dbfc