Tools/DumpRenderTree/blackberry/EventSender.cpp
@@ -151,6 +151,7 @@ static JSValueRef keyDownCallback(JSContextRef context, JSObjectRef function, JS
 
     static const JSStringRef lengthProperty = JSStringCreateWithUTF8CString("length");
     bool needsAltKeyModifier = false;
+    bool needsCtrlKeyModifier = false;
     if (argumentCount > 1) {
         if (JSObjectRef modifiersArray = JSValueToObject(context, arguments[1], 0)) {
             int modifiersCount = JSValueToNumber(context, JSObjectGetProperty(context, modifiersArray, lengthProperty, 0), 0);
@@ -160,6 +161,8 @@ static JSValueRef keyDownCallback(JSContextRef context, JSObjectRef function, JS
                     needsShiftKeyModifier = true;
                 else if (JSStringIsEqualToUTF8CString(string, "altKey"))
                     needsAltKeyModifier = true;
+                else if (JSStringIsEqualToUTF8CString(string, "ctrlKey"))
+                    needsCtrlKeyModifier = true;
                 JSStringRelease(string);
             }
         }
@@ -172,6 +175,8 @@ static JSValueRef keyDownCallback(JSContextRef context, JSObjectRef function, JS
         modifiers |= KEYMOD_SHIFT;
     if (needsAltKeyModifier)
         modifiers |= KEYMOD_ALT;
+    if (needsCtrlKeyModifier)
+        modifiers |= KEYMOD_CTRL;
 
     page->keyEvent(BlackBerry::Platform::KeyboardEvent(charCode, BlackBerry::Platform::KeyboardEvent::KeyChar, modifiers));
 
